--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
             <h2 class="section__title section__title--services">what do I do?</h2>
             <div class="services">
                 <div class="service">
-                    <h3>Design + Development</h3>
+                    <h3>media</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div> <!-- / service -->
                 
                 <div class="service">
-                    <h3>E-Commerce</h3>
+                    <h3>architecture</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div> <!-- / service -->
                 
                 <div class="service">
-                    <h3>WordPress</h3>
+                    <h3>design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div> <!-- / service -->
             </div> <!-- / services -->
