--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -54,7 +54,7 @@
         <!-- Footer -->
         <footer class="footer">
             <!-- replace with your own email address -->
-            <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+            <a href="mailto:hello@carlos-gf.com" class="footer__link">hello@carlos-gf.com</a>
             <ul class="social-list">
                 <li class="social-list__item">
                     <a class="social-list__link" href="https://codepen.io">
